Fixed clippy's opacity

--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -119,6 +119,11 @@ body {
     bottom: -10px;
     z-index: 3;
     cursor: help; 
+    opacity: 0.6;
+}
+
+#clippy:hover {
+    opacity: 1;
 }
 
 #clippy:hover::after {
